fixed broken css which had frozen entire app

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -346,9 +346,8 @@ footer {
 
 #myModal {
   height: 100%;
-  width: 90%;
-  display: flex;
-  align-items: center;
+  width: 93%;
+  margin-top: 10%;
 }
 
 .modal-content {
@@ -357,5 +356,5 @@ footer {
 
 .closeChart {
     position: relative;
-    margin: 0 0 0 90%;
+    margin: 0 0 0 91.5%;
 }
